--- a/MyProject/src/app/components/pages/home/home.component.html
+++ b/MyProject/src/app/components/pages/home/home.component.html
@@ -1,3 +1,5 @@
+<app-search></app-search>
+
 <ul>
   <li *ngFor="let food of foods">
     <a routerLink="/food/{{food.id}}">
@@ -27,7 +29,7 @@
 
         <div class="price">
           <span>
-            {{food.price | currency}}
+            {{food.price | currency:"INR":"symbol"}}
           </span>
         </div>
       </div>
