--- a/MyProject/src/app/components/pages/food-page/food-page.component.html
+++ b/MyProject/src/app/components/pages/food-page/food-page.component.html
@@ -36,6 +36,6 @@
       </span>
     </div>
 
-    <button>Add to cart</button>
+    <button (click)="addToCart()">Add to cart</button>
   </div>
 </div>
